# Computer-Graphics-Final-Project

./: CMakeLists.txt  README.md
lab2/: lab2.cpp  main.cpp
lab2/Building/: box.frag  box.vert  building.h
lab2/Ground/: ground.frag  ground.h  ground.vert
lab2/Person/: bot.frag  bot.gltf  bot.vert  person.h
lab2/Shadow/: depth.frag
lab2/Skybox/: skybox.frag  skybox.h  skybox.vert
lab2/Snow/: snow.frag  snow.h  snow.vert
lab2/Tree/: tree.frag  tree.h  tree.vert
